[package]
name = "saitoworlds"
version = "0.1.0"
authors = ["zinnusl"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
image = "*"
js-sys = "*"
async-trait = "*"
num-traits = "*"
num-derive = "*"
yew = "*"
stylist = { version = "0.10.1", features = ["yew", "yew_use_style"] }
gloo = "0.8"

[dev-dependencies]
wasm-bindgen-test = "*"

[dependencies.web-sys]
version = "*"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'ImageData',
    'Response',
    'ImageBitmap'
]
