[package]
name = "saitoworlds"
version = "0.1.0"
authors = ["zinnusl <zinnusl@draig.de>"]
license = "MIT"
edition = "2021"
rust-version = "1.61"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
chrono = "0.4.15"
clap = { version = "3.0.6", features = ["derive", "env"] }
console_error_panic_hook = "0.1.7"
cpal = { version = "0.14.0", features = ["wasm-bindgen"] }
hound = "3.4.0"
js-sys = "0.3.59"
midir = "0.8.0"
nannou = { git = "https://github.com/nannou-org/nannou.git", features = [
    "wasm-experimental",
] }
rand = { version = "0.8.3", features = ["small_rng"] }
ringbuf = "0.2.2"
serde = "1.0.117"
serde_yaml = "0.8.14"
wasm-bindgen = "0.2.82"
wasm-bindgen-test = "0.3.33"
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.50", features = [
    "Blob",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "Location",
    "Response",
    "UrlSearchParams",
    "Window",
    "DomStringMap",
] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
