[package]
name = "saitoworlds"
version = "0.1.0"
authors = ["zinnusl <zinnusl@draig.de>"]
license = "MIT"
edition = "2021"
rust-version = "1.67"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "*", features = ["unstable"] }
chrono = "*"
clap = { version = "*", features = ["derive", "env"] }
console_error_panic_hook = "*"
cpal = { version = "*", features = ["wasm-bindgen"] }
hound = "*"
js-sys = "*"
midir = "*"
nannou = { git = "https://github.com/nannou-org/nannou.git", features = [
    "wasm-experimental",
] }
rand = { version = "*", features = ["small_rng"] }
ringbuf = "*"
serde = "*"
serde_yaml = "*"
wasm-bindgen = "*"
wasm-bindgen-test = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = [
    "Blob",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "Location",
    "Response",
    "UrlSearchParams",
    "Window",
    "DomStringMap",
] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
